Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85770

SwipeDelegate resizes incorrectly while it is open

    XMLWordPrintable

Details

    • 83f49d3f4c0041bf2c74ff1ff2eb03c5d37aa1f4 (qt/qtquickcontrols2/dev) 9143832e9a7470cd17ab1dcce983fbaf7448c0cd (qt/qtquickcontrols2/6.0) 3ff601134de497bd624bc27f454b92b326c7cf27 (qt/tqtc-qtquickcontrols2/tqtc/lts-5.15)
    • UI Bug Fixing Q1/2021

    Description

      To reproduce, run attached example, swipe the first item open and then resize the window.

      It seems that the it is resizing in opposite direction.

      import QtQuick 2.12
      import QtQuick.Controls 2.15
      import QtQuick.Layouts 1.0
      
      ApplicationWindow {
          id: window
          visible: true
          width: 600
          height: 400
      
          SwipeDelegate {
              id: swipeDelegate
              text: "swipe to left here, then resize window"
              width: parent.width
      
              swipe.right: Item {
                  width: swipeDelegate.width / 2
              }
      
              swipe.transition: Transition {
                  SmoothedAnimation {
                      velocity: 1
                      maximumEasingTime: 100
                      easing.type: Easing.InQuad
                  }
              }
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mitch_curtis Mitch Curtis
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes